--- a/Home.html
+++ b/Home.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Photophile / Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Home.css">
+    <link rel="icon" href="PP (1).png" sizes="32x32">
+
 </head>
 <body>
     <div class="container">
-    <img src="logo/Photophile Logo Brown.png" alt="">
+   <a href="Home.html"><img src="logo/Photophile Logo Brown.png" alt=""></a>
     </div>
     <nav>
         <ul class="link">
@@ -23,10 +25,10 @@
     </nav>    <br><br>    
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="slider_images/001.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="slider_images/004.jpg" alt=""></div>
           <div class="swiper-slide"><img src="slider_images/002 (1).jpg" alt=""></div>
           <div class="swiper-slide"><img src="slider_images/003.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="slider_images/004.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="slider_images/001.jpg" alt=""></div>
           <div class="swiper-slide"><img src="slider_images/005.jpg" alt=""></div>
           <div class="swiper-slide"><img src="slider_images/549A1113 copy.jpg" alt=""></div>
           <div class="swiper-slide"><img src="slider_images/007.jpg" alt=""></div>
@@ -110,6 +112,7 @@
             </div>
         </section>
         </section>
+        <br><br>
         <div class="container3">    
           <p>films are crafted to tell your love story with beauty and heartfelt emotion. From the laughter and tears to the quiet, tender moments, we weave together a narrative that feels as magical as your day. Each film is a unique blend of candid memories, joyful celebrations, and meaningful details, creating a timeless keepsake of your journey.</p>        </div><br><br>
        <div id="marqueeContainer">
@@ -201,12 +204,16 @@
           <div class="back1"></div>
           <div class="front1">
             <h1>BHAVESH & TEJAL</h1>
-            <p style="font-size: medium;">Two friends shared laughter and dreams, their bond growing deeper over time. One day, they realized their connection was more than friendship—it was love. From that moment, they became soulmates, building a life filled with trust and shared dreams, rooted in their beautiful friendship.</p>
+            <p style="font-size: medium;">College friends often start as study companions, but over time, they become soulmates. Through late-night talks, shared struggles, and endless laughter, their bond deepens. Even after seven years, despite life's ups and downs, their friendship remains strong—offering unwavering support, proving that some connections last forever.</p>
             <button style="width: 50%; height:60px; background-color: #E7E3D8; font-size: large; border: 1px solid;">EXPLOR MORE</button>
+          </div>
+          <div class="butt">
+            <button>FOR MORE STORIES...</button>
           </div>
         </div>
 
         <!-- testimonial -->
+        <h1>TESTIMONIAL</h1>
         <div class="container7">
           <div class="contant">
             <h1 id="sliderHeading"></h1>
@@ -228,43 +235,42 @@
           const sliderData = [
             {
               video: "001.mp4",
-              heading: "AKSHAY - POOJA",
-              text: "Two friends shared laughter and dreams, their bond growing deeper over time. One day, they realized their connection was more than friendship—it was love. From that moment, they became soulmates, building a life filled with trust and shared dreams, rooted in their beautiful friendship."
+              heading: "Unmesh & Akansha",
+              text: "Feedback from the client like this ❣️❣️"
             },
             {
-              img: "testimonial/002.jpg",
-              heading: "A MAGICAL BOND",
-              text: "Their eyes met across the room, and something clicked. It wasn’t just chemistry—it was destiny. They danced through life's highs and lows, hand in hand, never letting go."
-            },
-            {
-              img: "testimonial/003.jpg",
-              heading: "FOREVER TOGETHER",
-              text: "With each passing day, their love grew stronger. Through storms and sunshine, they remained each other’s anchor and light, building a forever story of love and friendship."
-            },
-            {
-              img: "testimonial/004.jpg",
-              heading: "TOGETHER ALWAYS",
-              text: "Their journey was filled with laughter, love, and cherished moments. A bond that time could never fade."
-            },
-            {
-              img: "testimonial/005.jpg",
-              heading: "THEIR JOURNEY",
-              text: "Each step taken together made their story more beautiful, more magical, and more memorable."
+              img: "testimonial/Asds.jpg",
+              heading: "Hemang & Reema",
+              text: "Thank you for capturing the essence of our special day so perfectly. Your photographs have not only captured the moments but also the emotions associated with them. Each picture tells a beautiful story, allowing us to relive those cherished memories again and again. We truly appreciate your talent and effort in making our day even more special."
             },
             {
               img: "testimonial/006.jpg",
-              heading: "PRECIOUS MOMENTS",
-              text: "Captured forever, those beautiful moments now live on in their hearts and in our frames."
+              heading: "Rahul & Muskan",
+              text: "You made the entire experience truly unforgettable for us! Every moment was filled with joy, and we couldn’t have asked for anything better. We absolutely loved all the pictures—they perfectly captured the magic and emotions of the day. Thank you for making it so special! ❤"
             },
             {
-              img: "testimonial/007.jpg",
-              heading: "THEIR LOVE STORY",
-              text: "A tale of two hearts, two lives, and one unforgettable love story."
+              img: "testimonial/003.jpg",
+              heading: "Bhavesh & Tejal",
+              text: "I came across Ankit at one of my friends wedding , when people do research to select the best photographer for their big day, I was lucky enough to find her at my friend's wedding, and with no second thought, I booked Ankit for my wedding. we both are very s﻿hy person and hates to be captured team made sure to make us comfortable while shoot and capture the best of our wedding. Ankit and their team are super friendly and professional at the same time to work with, you just need to tell her what you looking for and you get more than what you have expected, he has an innate sense of capturing your wedding moments which you live through your life."
             },
             {
               img: "testimonial/008.jpg",
-              heading: "A TIMELESS BOND",
-              text: "Their love stands still in time — beautiful, strong, and everlasting."
+              heading: "Chirag & Tanushree",
+              text: "Ankit Bhai, we wanted to take a moment to express our gratitude for the role you played in making our wedding day truly unforgettable ! your dedication and creativity brought so much enjoy and magic in our celebration. thank you for capturing RAW moments and emotions."
+            },
+            {
+              img: "testimonial/002.jpg",
+              heading: "Riddhesh & Mansi  ",
+              text: "You made our wedding day even more special with your incredible photography! Every picture beautifully captured the emotions, love, and joy we felt. Your professionalism and creativity made the whole experience so enjoyable. We are beyond grateful for these timeless memories!"          },
+            {
+              img: "testimonial/007.jpg",
+              heading: "Akshay & Pooja",
+              text: "From the moment we chose him as our photographer for every event—from our pre-wedding shoot to the engagement, Haldi, and finally, the big day—we knew we had made the best decision.His talent behind the lens is truly remarkable, capturing each special moment with such authenticity and emotion. Every picture tells a story, and his wedding films are nothing short of breathtaking—stunning, nostalgic, and filled with heart.  "
+            },
+            {
+              img: "testimonial/004.jpg",
+              heading: "Nayan & Nikita",
+              text: "We can’t say how happy we are that we had you as our wedding photographer – you were just absolutely amazing and the photos and videos show that! All of our guests commented how good you were and how you just knew when and how to take the perfect picture! I will be recommending you to anyone that is looking for a wedding photographer!! Your sneak peek video , teaser, wedding film and photos are so nice Thank you so much!"
             }
           ];
         
