--- a/aboutus.html
+++ b/aboutus.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="aboutus.css">
+    <link rel="icon" href="PP (1).png" sizes="32x32">
+
 </head>
 <body>
     <!-- navigation bar -->
     <div class="hero">
         <div class="container1">
-            <img src="logo/Photophile Logo Brown.png" alt="">
-            </div>
+            <a href="Home.html"><img src="logo/Photophile Logo Brown.png" alt=""></a>
+        </div>
             <nav>
                 <ul class="link">
                     <li class="links"><a href="Home.html">Home</a></li>
