--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,15 @@
     <title>GET IN TOUCH</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="contact.css">
+    <link rel="icon" href="PP (1).png" sizes="32x32">
+
 </head>
 <body>
     <!-- navigation bar -->
      <div class="hero">
     <div class="container">
-        <img src="logo/Photophile Logo.png">
-        </div>
+      <a href="Home.html"><img src="logo/Photophile Logo Brown.png" alt=""></a>
+    </div>
         <nav>
             <ul class="link">
                 <li class="links"><a href="Home.html">Home</a></li>
