--- a/films.html
+++ b/films.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Films</title>
+    <link rel="icon" href="PP (1).png" sizes="32x32">
+
     <link rel="stylesheet" href="films.css">
 </head>
 <body>
     <!-- navigation bar -->
     <div class="hero">
         <div class="container1">
-            <img src="logo/Photophile Logo Brown.png" alt="">
-            </div>
+          <a href="Home.html"><img src="logo/Photophile Logo Brown.png" alt=""></a>
+        </div>
             <nav>
                 <ul class="link">
                     <li class="links"><a href="Home.html">Home</a></li>
